# ML_sdfi_fastai2

./: Dockerfile  README.md  check_logs.py  docker-compose.yml  docker_instructions.txt  environment.yml  patch_fastai_fakeloader.py  requirements.txt  requirements_extra.txt  requirements_pip.txt  setup.cfg  verify_functionality.py
configs/example_configs/: config_swin_upernet.ini  infer_example_dataset.ini  report_example_dataset.ini  segformer_config.ini  test_convnextv2_upernet.ini  test_resnet34.ini  test_segformer.ini  test_swin_upernet.ini  test_train_example_dataset.ini  train_example_dataset.ini  train_example_dataset_2_batchsize_2_workers.ini  train_example_dataset_zero_workers.ini
src/ML_sdfi_fastai2/: ImageBlockReplacement.py  download_models_from_huggingface.py  infer.py  merge_predictions_from_different_models.py  report.py  sdfi_dataset.py  segformer_train.py  train.py  upload_models_to_huggingface.py
src/ML_sdfi_fastai2/analyse/: image_from_mask.py  make_prediction_csv.py  parse_statistics_csv.py  plot_training_curves.py  rapport.py  rapport_from_model.py  reportlab_functions.py  sdfi_reportlab.py  visualize_all_images_in_text_file.py  visualize_predictions_csv.py
src/ML_sdfi_fastai2/analyse/SDFI_dataset/: befaestesle_dataset.py  landsdakkende_testset.py
src/ML_sdfi_fastai2/pytorch_models/: models.py
src/ML_sdfi_fastai2/transforms/: sdfi_transforms.py
src/ML_sdfi_fastai2/utils/: create_all_and_valid_txt.py  create_train_txt.py  find_file.py  plot.py  process_labels.py  turn_roof_labels_to_building_or_no_building_labels.py  utils.py
