

[metadata]
name = ML_sdfi_fastai2
version = 0.1.0
author = Rasmus Johansson
author_email = rajoh@sdfi.dk
url = http://sdfe-git/ITU/ML/fastai2
description = ML with fastai2
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = Machine Learning, Semantic Segmentation, Impervious surfaces, Aerial photos
classifiers =
    Topic :: Semantic segmentation, Impervious surfaces
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft Windows
    Programming Language :: Python
repository = "http://sdfe-git/ITU/ML/fastai2"

[options]
package_dir=
	=src
packages=find:
[options.packages.find]
where=src


setup_requires =
    setuptools




